@@ -1,3 +1,3 @@
-#!/bin/bash
+#!/usr/bin/env bash
 #Dummy file
 $BIOBASH_BIN_OS/seqtk
